--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
     <a href="./DumpName/index.php">DumpName</a><br>
     <a href="./DumpName2/index.php">DumpName2</a><br>
     <a href="./BubbleSort/index.php">BubbleSort</a><br>
+    <a href="./IniFile/index.php">IniFile</a><br>
+    <a href="./Meibo/index.php">Meibo</a><br>
 </body>
 </html>
