--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <a href="./DumpName/index.php">DumpName</a><br>
     <a href="./DumpName2/index.php">DumpName2</a><br>
     <a href="./BubbleSort/index.php">BubbleSort</a><br>
-    <a href="./IniFile/index.php">IniFile</a><br>
+    <a href="./IniFile/input.php">IniFile</a><br>
     <a href="./Meibo/index.php">Meibo</a><br>
+    <a href="./Meibo2/db.php">Meibo2</a><br>
 </body>
 </html>
