modified Meibo Meibo2

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <a href="./BubbleSort/index.php">BubbleSort</a><br>
     <a href="./IniFile/input.php">IniFile</a><br>
     <a href="./Meibo/index.php">Meibo</a><br>
-    <a href="./Meibo2/db.php">Meibo2</a><br>
+    <a href="./Meibo2/index.php">Meibo2</a><br>
 </body>
 </html>
